# hyperlight-js

./: Cargo.toml  Justfile  README.md
.github/: dependabot.yml  release.yml
.github/workflows/: CargoAudit.yml  CreateRelease.yml  CreateReleaseBranch.yml  IssueLabelChecker.yml  PRLabelChecker.yml  ValidatePullRequests.yml  auto-merge-dependabot.yml  cargo-publish.yml  dep_benchmarks.yml  dep_build.yml  gh-publish.yml  npm-publish.yml
dev/: auto-approve-dependabot.sh
docs/: extending-runtime.md  release.md
src/hyperlight-js/: Cargo.toml  build.rs
src/hyperlight-js-common/: Cargo.toml
src/hyperlight-js-common/src/: dap.rs  lib.rs
src/hyperlight-js-runtime/: Cargo.toml  build.rs
src/hyperlight-js-runtime/src/: debugger.rs  host_fn.rs  lib.rs  main.rs
src/hyperlight-js-runtime/src/globals/: console.rs  freeze.rs  mod.rs
src/hyperlight-js-runtime/src/guest/: dap.rs  debugger.rs  mod.rs
src/hyperlight-js-runtime/src/guest/stubs/: clock.rs  mod.rs
src/hyperlight-js-runtime/src/main/: debugger.rs  hyperlight.rs
src/hyperlight-js-runtime/src/main/stubs/: clock.rs
src/hyperlight-js-runtime/src/modules/: io.rs  mod.rs
src/hyperlight-js-runtime/tests/: native_modules.rs  tracing_features.rs
src/hyperlight-js-runtime/tests/fixtures/extended_runtime/: Cargo.toml
src/hyperlight-js-runtime/tests/fixtures/extended_runtime/src/: main.rs
src/hyperlight-js-runtime/tests/fixtures/native_math/: Cargo.toml
src/hyperlight-js/benches/: benchmarks.rs
src/hyperlight-js/examples/data/fibonacci/: data.json  handler.js
src/hyperlight-js/examples/hello-world/: main.rs
src/hyperlight-js/examples/user_modules/: main.rs
src/hyperlight-js/src/: lib.rs
src/hyperlight-js/src/debug/: comm.rs  context.rs  errors.rs  host_funcs.rs  messages.rs  mod.rs  protocol.rs  server.rs
src/hyperlight-js/src/sandbox/: host_fn.rs  js_sandbox.rs  loaded_js_sandbox.rs  proto_js_sandbox.rs  sandbox_builder.rs
src/hyperlight-js/tests/: host_functions.rs  user_modules.rs
src/js-host-api/: .npmignore  Cargo.toml  DEVELOPMENT.md  README.md  TYPE_NAMING.md  lib.js  lib.mjs  package-lock.json  package.json  test-pack.sh
src/js-host-api/examples/: user-modules.js
src/js-host-api/examples/mcp-server/: README.md  demo-copilot-cli.ps1  demo-copilot-cli.sh  package-lock.json  package.json  server.js
src/js-host-api/examples/mcp-server/tests/: config.test.js  helpers.js  mcp-server.test.js  prompt-examples.test.js  timing.test.js
src/js-host-api/npm/linux-x64-gnu/: package.json
src/js-host-api/npm/linux-x64-musl/: package.json
src/js-host-api/npm/win32-x64-msvc/: package.json
src/js-host-api/src/: lib.rs
src/js-host-api/tests/: host-functions.test.js  sandbox.test.js
