[workspace]
resolver = "2"
members = ["src/hyperlight-js", "src/js-host-api", "src/hyperlight-js-runtime", "src/hyperlight-js-common"]

[workspace.package]
version = "0.3.0"
edition = "2024"
rust-version = "1.89"
license = "Apache-2.0"
repository = "https://github.com/hyperlight-dev/hyperlight-js"
readme = "README.md"

[workspace.dependencies]
hyperlight-guest-bin = { version = "0.16.0", features = ["libc"] }
hyperlight-host = { version = "0.16.0", default-features = false }
hyperlight-common = { version = "0.16.0", default-features = false }
hyperlight-guest = { version = "0.16.0" }

hyperlight-js = { version = "0.3.0", path = "src/hyperlight-js" }
hyperlight-js-runtime = { version = "0.3.0", path = "src/hyperlight-js-runtime" }
hyperlight-js-common = { version = "0.3.0", path = "src/hyperlight-js-common" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
